--- a/instargram.html
+++ b/instargram.html
@@ -1,11 +1,9 @@
 <html>
-    <head></head>
+    <head>
+        <link href="style.css" rel="stylesheet">
+    </head>
     <body>
-        <style>
-            h2{ color:red;} .highlight{ border:solid; }
-            #profile{ border:solid; border-color:blue;}
-        </style>
-
+        
 
         <div>
         <img src="https://www.instagram.com/static/images/web/logged_out_wordmark.png/7a252de00b20.png"/>
