--- a/instargram.html
+++ b/instargram.html
@@ -15,7 +15,7 @@
 
         <!-- 파트 분할할때 가장많이 사용된다. -->
         <div>
-            <h2>half_bottle</h2>
+            <h2>Sunghun.Samuel</h2>
             <button>프로필 편집</button>
             </div>
         </div>
@@ -25,7 +25,7 @@
                 <strong>
                 최성훈 (Sunghun Choi)
                 </strong><br/>
-                작가
+                프론트엔드 개발자가 목표
             </p> 
         </div>
         <div>    
@@ -54,26 +54,44 @@
         </div>    
     <div>    
             <p>
-                <div>게시물<br/>
-                133</div> 
-                <div>팔로워<br/>
-                408</div>
-                <div>팔로우<br/>
-                189</div>
+                <div id="stat_bar">
+                    <div class="stat">
+                        게시물<br/>
+                        133
+                    </div>
+
+                    <div class="stat">
+                        팔로워<br/>
+                        408
+                    </div>
+
+                    <div class="stat">
+                        팔로우<br/>
+                        189
+                    </div>
+                </div>
             </p>
         </div>
 
         <div>아이콘이 들어갈 자리</div>
         <div>
-            <img src="image/thumbnails/1.jpg" width="32%"/>
-            <img src="image/thumbnails/2.jpg" width="32%"/>
-            <img src="image/thumbnails/3.jpg" width="32%"/>
-            <img src="image/thumbnails/4.jpg" width="32%"/>
-            <img src="image/thumbnails/5.jpg" width="32%"/>
-            <img src="image/thumbnails/6.jpg" width="32%"/>
-            <img src="image/thumbnails/7.jpg" width="32%"/>
-            <img src="image/thumbnails/8.jpg" width="32%"/>
-            <img src="image/thumbnails/9.jpg" width="32%"/>
+            <div class="thumbnail_grid">
+                <img src="image/thumbnails/1.jpg" class="thumbnail"/>
+                <img src="image/thumbnails/2.jpg" class="thumbnail"/>
+                <img src="image/thumbnails/3.jpg" class="thumbnail"/>
+            </div>
+            
+            <div class="thumbnail_grid">
+                <img src="image/thumbnails/4.jpg" class="thumbnail"/>
+                <img src="image/thumbnails/5.jpg" class="thumbnail"/>
+                <img src="image/thumbnails/6.jpg" class="thumbnail"/>
+            </div>
+
+            <div class="thumbnail_grid">
+                <img src="image/thumbnails/7.jpg" class="thumbnail"/>
+                <img src="image/thumbnails/8.jpg" class="thumbnail"/>
+                <img src="image/thumbnails/9.jpg" class="thumbnail"/>
+            </div>
         </div>
     </body>
 </html>
