--- a/instargram.html
+++ b/instargram.html
@@ -81,7 +81,17 @@
             </p>
         </div>
 
-        <div>아이콘이 들어갈 자리</div>
+        <div id="sub_icons">
+            <div class="selected">
+                <div><i class="fas fa-border-all"></i></div>
+            </div>
+                <div><i class="fas fa-film"></i></div>
+                <div><i class="far fa-play-circle"></i></div>
+                <div><i class="far fa-bookmark"></i></div>
+                <div><i class="fas fa-user-tag"></i></div>
+            
+        </div>   
+
         <div>
             <div class="thumbnail_grid">
                 <img src="image/thumbnails/1.jpg" class="thumbnail"/>
