--- a/part10/10_2_1.html
+++ b/part10/10_2_1.html
@@ -20,3 +20,15 @@
 <p> 화면에 어떻게 표시되나요? </p>
 
 <img class="mobile" src="image/profile.jpg"/>
+
+<html>
+    <body>
+        <div id="mobile">
+            영역1
+        </div>
+
+        <div id="desktop">
+            영역2
+        </div>
+    </body>
+</html>
