--- a/instargram.html
+++ b/instargram.html
@@ -2,6 +2,7 @@
     <head>
         <link href="style.css" rel="stylesheet">
         <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="top">
@@ -23,20 +24,22 @@
 
         <!-- 파트 분할할때 가장많이 사용된다. -->
         <div id="profile_info">
-            <div id="id">Sunghun.Samuel
-            <i class="fas fa-cog"></i></div>
+            <div id="id">
+                <span>Sunghun.Samuel</span>
+                <i class="fas fa-cog"></i>
+            </div>
             <button>프로필 편집</button>
             </div>
         </div>
 
         <div>
             <p>
-                <strong>
+                <strong id="userInfo">
                 최성훈 (Sunghun Choi)
                 </strong><br/>
-                프론트엔드 개발자가 목표
+                <span id="summary">프론트엔드 개발자가 목표</span>
             </p>    
-            <p>
+            <p id="profileDetail">
                 <a href="https://github.com/jhanf12/HTML_instargram.git">
                 jhanf12.github.io</a>
             </p> 
